K8s/jenkins/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  #namespace: logos
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: rancher-logo-k3s-ruan-dev-tls
      hosts:
        - k3s-cluster.eastus2.cloudapp.azure.com
  rules:
  - host: k3s-cluster.eastus2.cloudapp.azure.com
    http:
      paths:
        - path: /
          backend:
            serviceName: jenkins-service
            servicePort: 8080
